# litserve-huggingface-ie

./: Dockerfile  README.md  build_push_docker.sh  client.py  client_async.py  deploy.py  endpoints-entrypoint.sh  nginx.conf  push_to_dockerhub.sh  pyproject.toml  requirements.txt  retag_docker_image.sh  server.py
tests/: test.ipynb
