# poetry export -f requirements.txt --output requirements.txt

[tool.poetry]
version = "0.0.1"
authors = ["moritzlaurer <moritz@huggingface.co>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
litserve = "^0.2.6"
requests = "^2.32.3"
transformers = "^4.48.0"
accelerate = "^1.2.1"
pillow = "^11.1.0"
sentencepiece = "^0.2.0"
protobuf = "^5.29.3"
aiohttp = "^3.11.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
